--- a/notebooks/playground.ipynb
+++ b/notebooks/playground.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,6 +225,464 @@
    ],
    "source": [
     "gen(*v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = np.array([[[1,2,3,4],[5,6,7,8],[9,10,11,12]],[[13,14,15,16],[17,18,19,20],[21,22,23,24]]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 3, 4)"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.3, -0.6],\n",
+       "       [-0.4, -0.7],\n",
+       "       [-0.5, -0.8]])"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.array([[-.3,-.4,-.5],[-.6,-.7,-.8]]).T\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3, 2)"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-43.3, -46.6, -49.9, -53.2])"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.tensordot(n,a, axes=([0,1],[1,0]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "np.tensordot(n,a, axes=([0,1],[1,0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3, 2, 4)"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n.transpose((1,0,2)).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v1 = np.array([1,2,3,4])\n",
+    "v2 = np.array([7,8,9,0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num = v1.reshape((1,4)) - v2.reshape((4,1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "u = np.array([1,2,3,4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def diff(x,y):\n",
+    "    if x.all() == y.all() :\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return x - y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "den = u.reshape((1,4)) - u.reshape((4,1)) + np.identity(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m1 = np.ones((2,2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m2 = 2 * m1\n",
+    "m3 = 3 * m1\n",
+    "m4 = 4 * m1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mm = np.array([m1,m2,m3,m4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4, 2, 2)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mm.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[24., 24.],\n",
+       "       [24., 24.]])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.prod(mm, axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 430,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "e = np.linspace(0.1, 1, 10)\n",
+    "q = np.linspace(0.1, 1,  3)\n",
+    "\n",
+    "n_e_points = e.shape[0]\n",
+    "n_q_points = q.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 431,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "basis = np.ones((n_e_points, n_q_points), dtype=np.float64)\n",
+    "b = np.ones((n_e_points, n_q_points, n_q_points), dtype=np.float64)\n",
+    "    \n",
+    "for i in range(n_e_points):\n",
+    "    for j in range(n_q_points):\n",
+    "        for k in range(n_q_points):\n",
+    "            if k == j:\n",
+    "                continue\n",
+    "            b[i, j, k] = (e[i] - q[k]) / (q[j] - q[k])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 432,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.  , -0.45, -0.9 ],\n",
+       "       [ 0.1 , -0.35, -0.8 ],\n",
+       "       [ 0.2 , -0.25, -0.7 ],\n",
+       "       [ 0.3 , -0.15, -0.6 ],\n",
+       "       [ 0.4 , -0.05, -0.5 ],\n",
+       "       [ 0.5 ,  0.05, -0.4 ],\n",
+       "       [ 0.6 ,  0.15, -0.3 ],\n",
+       "       [ 0.7 ,  0.25, -0.2 ],\n",
+       "       [ 0.8 ,  0.35, -0.1 ],\n",
+       "       [ 0.9 ,  0.45,  0.  ]])"
+      ]
+     },
+     "execution_count": 432,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num = e.reshape((n_e_points, 1)) - q\n",
+    "num"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 433,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.  , -0.45, -0.9 ],\n",
+       "       [ 0.45, -1.  , -0.45],\n",
+       "       [ 0.9 ,  0.45, -1.  ]])"
+      ]
+     },
+     "execution_count": 433,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "den = q.reshape((n_q_points, 1)) - q - np.identity(n_q_points)\n",
+    "den"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 425,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "den_r = den.reshape((1, n_q_points, n_q_points))\n",
+    "num_r = num.reshape((n_e_points, 1, n_q_points))\n",
+    "n, d = np.broadcast_arrays(num_r, den_r)\n",
+    "#for k in range(n.shape[0]):\n",
+    "#    np.fill_diagonal(n[k,:,:], 1)\n",
+    "#    np.fill_diagonal(d[k,:,:], 1)\n",
+    "#num_r[:,np.arange(num_r.shape[1]), np.arange(num_r.shape[2])] = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 434,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prod = num_r / den_r\n",
+    "#for k in range(prod.shape[0]):\n",
+    "#    np.fill_diagonal(prod[k,:,:], 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 435,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#for k in range(prod.shape[0]):\n",
+    "#    np.fill_diagonal(prod[k,:,:], 1)\n",
+    "ar = np.arange(prod.shape[1])\n",
+    "prod[:,ar,ar] = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 436,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10, 3, 3)"
+      ]
+     },
+     "execution_count": 436,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prod.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 437,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ True,  True,  True],\n",
+       "        [ True,  True,  True],\n",
+       "        [ True,  True,  True]],\n",
+       "\n",
+       "       [[ True,  True,  True],\n",
+       "        [ True,  True,  True],\n",
+       "        [ True,  True,  True]],\n",
+       "\n",
+       "       [[ True,  True,  True],\n",
+       "        [ True,  True,  True],\n",
+       "        [ True,  True,  True]],\n",
+       "\n",
+       "       [[ True,  True,  True],\n",
+       "        [ True,  True,  True],\n",
+       "        [ True,  True,  True]],\n",
+       "\n",
+       "       [[ True,  True,  True],\n",
+       "        [ True,  True,  True],\n",
+       "        [ True,  True,  True]],\n",
+       "\n",
+       "       [[ True,  True,  True],\n",
+       "        [ True,  True,  True],\n",
+       "        [ True,  True,  True]],\n",
+       "\n",
+       "       [[ True,  True,  True],\n",
+       "        [ True,  True,  True],\n",
+       "        [ True,  True,  True]],\n",
+       "\n",
+       "       [[ True,  True,  True],\n",
+       "        [ True,  True,  True],\n",
+       "        [ True,  True,  True]],\n",
+       "\n",
+       "       [[ True,  True,  True],\n",
+       "        [ True,  True,  True],\n",
+       "        [ True,  True,  True]],\n",
+       "\n",
+       "       [[ True,  True,  True],\n",
+       "        [ True,  True,  True],\n",
+       "        [ True,  True,  True]]])"
+      ]
+     },
+     "execution_count": 437,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prod == b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 441,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 4])"
+      ]
+     },
+     "execution_count": 441,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v1[:,...]"
    ]
   },
   {
